--- a/css/contacts-main-content.css
+++ b/css/contacts-main-content.css
@@ -2,7 +2,6 @@
     flex-grow: 1;
     max-width: 1920px;
     width: 100vw;
-    height: 100vh;
 }
 
 
