--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 body {
 	font-family: "Inter", Arial, sans-serif;
 	color: #333;
-	overflow: hidden;
 	background: transparent;
 }
 
@@ -78,10 +77,6 @@ header {
 	box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
 }
 
-/* Main Content */
-main {
-	min-height: calc(100vh - 96px);
-}
 
 .user-avatar {
 	color: #4589ff;
