--- a/css/task.css
+++ b/css/task.css
@@ -1,8 +1,4 @@
-/* Task Form Styles */
-.add-task-main-container {
-    height: 100vh;
-    width: auto;
-}
+
 
 .title-input {
   font-size: 32px !important;
